<resources>
    <string name="app_name">Github Users</string>
    <string name="settings_text">Settings</string>
    <string name="search_placeholder">Search user</string>
    <string name="text_user_avatar">User Avatar</string>

    <string name="title_detail_activity">Detail User</string>

    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_repositories">Repositories</string>
    <string name="default_username">Default Username</string>
    <string name="default_name">Default Name</string>
    <string name="default_location">No Location</string>
    <string name="default_company">No Company</string>
    <string name="default_value">00</string>

    <string name="favorite_text">Favorites</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="title_favorite_activity">My Favorite Users</string>
    <string name="remove_favorite">Removed from Favorite</string>
    <string name="add_favorite">Added to Favorite</string>
    <string name="title_settings_activity">Settings</string>
</resources>